--- a/css/main.scss
+++ b/css/main.scss
@@ -1,22 +1,43 @@
-$font-stack: 'Open Sans',
+// Colors
+$primary: #5e81f4;
+$primary-light: #eef2fd;
+$primary-light-dark: #e5e9f9;
+$secondary: #ff606d;
+$secondary-light: #fef2f3;
+$main-color: #f5f5fb;
+$bg-color: #fff;
+$border: #e3e3eb;
+$text: #131336;
+$text-secondary: #9a9abe;
+// Fonts
+$font-family-body: 'Mulish',
+sans-serif;
+$font-family-logo: 'Ubuntu',
 Helvetica,
 sans-serif;
-$admin-header-height: 4em;
-$admin-footer-height: 4em;
-$admin-nav-width: 15em;
+// Sizes
+$admin-header-height: 6.25em;
+$admin-footer-height: $admin-header-height;
+$admin-nav-width: 11.75em;
+$admin-aside-width: 19.5em;
+$spacing-l: 2.5em;
 $spacing: 2em;
-$spacing-xs: 1em;
+$spacing-s: 1em;
+$spacing-xs: .75em;
 $spacing-xxs: .5em;
 $spacing-xxxs: .3em;
 $spacing-xxxxs: .1em;
-$dashboard-column-count: 2;
-// Colors
-$primary: #4050f5;
-$primary-light: #e2e4f8;
-$gray: #9c9eb2;
-$gray-lighter: #9c9eb266;
-$gray-lightest: #f1f1f8;
-$text: #1d256f;
+$logo: 1.3em;
+$font-logo: 1.1rem;
+$font: 1rem;
+$font-s: .9rem;
+$font-xs: .8rem;
+$font-xxs: .75rem;
+$main-grid-template-rows: $admin-header-height 1fr min-content;
+$main-border: 1px solid $border;
+$main-spacing-vert: .7em; //2.7em;
+$main-spacing-hor: 1.75em;
+$main-padding: $main-spacing-vert $main-spacing-hor 0 $main-spacing-hor;
 // Styles
 *,
 *::before,
@@ -25,15 +46,33 @@ $text: #1d256f;
 }
 
 body {
-    height: 100%;
-    overflow-x: hidden;
     margin: 0;
-    font-family: $font-stack;
+    font-family: $font-family-body;
     color: $text;
+    background-color: $bg-color;
+    display: grid;
+    height: 100vh;
+    grid-template-rows: $admin-header-height 1fr; //$admin-footer-height;
+    grid-template-columns: $admin-nav-width 1fr $admin-aside-width;
+    grid-template-areas: "header_nav header_main header_aside" "nav main aside" "nav main aside"; // "footer footer footer";
+}
+
+body::after {
+    content: "";
+    background: url(../art_reference/web.png);
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    opacity: 0.0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: 1;
 }
 
 input {
-    font-family: $font-stack;
+    font-family: $font-family-body;
 }
 
 input:focus,
@@ -56,39 +95,99 @@ input:focus {
 
 a {
     text-decoration: none;
-    color: $gray;
+    color: $text;
 }
 
-.admin {
+nav,
+main,
+aside {
     display: grid;
-    height: 100vh;
-    grid-template-rows: $admin-header-height 1fr $admin-footer-height;
-    grid-template-columns: $admin-nav-width 1fr;
-    grid-template-areas: "header header" "nav main" "footer footer";
-    flex-wrap: wrap;
+    grid-template-rows: $main-grid-template-rows;
+    padding: $main-padding
 }
 
-.admin__header {
-    grid-area: header;
-    background-color: #ccc;
-    box-shadow: 0 2px 8px -2px $gray-lighter;
-    z-index: 1;
+header {
+    padding: $main-padding;
+    align-items: center;
+    z-index: 2;
 }
 
-.admin__aside {
+.header_nav {
+    grid-area: header_nav;
+    display: grid;
+}
+
+.header_main {
+    grid-area: header_main;
+    background-color: $main-color;
+    display: grid;
+    grid-template-columns: 1fr max-content min-content;
+    gap: $spacing-s;
+    border-left: $main-border;
+    border-right: $main-border;
+}
+
+.header_aside {
+    grid-area: header_aside;
+    display: grid;
+    grid-template-columns: 1fr min-content;
+}
+
+nav {
     grid-area: nav;
-    background-color: #ddd;
-    border-right: 1px solid $gray-lighter;
 }
 
-.admin__main {
+aside {
+    grid-area: aside;
+}
+
+main {
     grid-area: main;
-    padding: $spacing;
-    background-color: #eee;
+    background-color: $main-color;
+    border-left: $main-border;
+    border-right: $main-border;
 }
 
-.admin__footer {
-    grid-area: footer;
-    background-color: #fff;
-    box-shadow: 0 -2px 8px -2px $gray-lighter;
+.logo {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    align-items: center;
+    gap: $spacing-s;
+    font-size: $font-logo;
+    font-family: $font-family-logo;
+}
+
+.logo img {
+    width: $logo;
+}
+
+.logo span {
+    font-size: $font-logo;
+    font-weight: 600;
+}
+
+.header_main .title {
+    font-weight: 700;
+    font-size: $font-s;
+}
+
+.header_main .date {
+    font-size: $font-xs;
+    color: $text-secondary;
+}
+
+.header_main i {
+    font-size: $font-s;
+    color: $primary;
+    background-color: $primary-light-dark;
+    padding: $spacing-xs;
+    border-radius: $spacing-xxs;
+}
+
+.header_aside .title {
+    font-size: $font-xs;
+}
+
+.header_aside i {
+    color: $text-secondary;
 }
