--- a/css/main.scss
+++ b/css/main.scss
@@ -3,12 +3,20 @@ $primary: #5e81f4;
 $primary-light: #eef2fd;
 $primary-light-dark: #e5e9f9;
 $secondary: #ff606d;
-$secondary-light: #fef2f3;
+$secondary-light: #f7e5e9;
+$secondary-lighter: #fef2f3;
 $main-color: #f5f5fb;
 $bg-color: #fff;
 $border: #e3e3eb;
 $text: #131336;
-$text-secondary: #9a9abe;
+$text-secondary: #b1b6d1;
+$text-inverted: #fff;
+$text-date: #9a9abe;
+$progress-bg: #e1e2eb;
+$vocabulary: #ff808b;
+$grammar: #4d4cac;
+$listening: #5e81f4;
+$writing: #c8c9e9;
 // Fonts
 $font-family-body: 'Mulish',
 sans-serif;
@@ -20,24 +28,40 @@ $admin-header-height: 6.25em;
 $admin-footer-height: $admin-header-height;
 $admin-nav-width: 11.75em;
 $admin-aside-width: 19.5em;
+// Spacing
+$spacing-xl: 3em;
 $spacing-l: 2.5em;
 $spacing: 2em;
+$spacing-m: 1.5em;
 $spacing-s: 1em;
 $spacing-xs: .75em;
 $spacing-xxs: .5em;
 $spacing-xxxs: .3em;
 $spacing-xxxxs: .1em;
 $logo: 1.3em;
+$upgradeIcon: 4.5em;
+$upgradeIconMargin: -3em;
+// Fonts
 $font-logo: 1.1rem;
+$font-message-count: .5rem;
+$font-l:1.25rem;
 $font: 1rem;
 $font-s: .9rem;
 $font-xs: .8rem;
 $font-xxs: .75rem;
-$main-grid-template-rows: $admin-header-height 1fr min-content;
+$font-xxxs: .7rem;
+// Other spacing
+$main-grid-template-rows: 1fr min-content;
 $main-border: 1px solid $border;
 $main-spacing-vert: .7em; //2.7em;
 $main-spacing-hor: 1.75em;
 $main-padding: $main-spacing-vert $main-spacing-hor 0 $main-spacing-hor;
+$nav-active-border: 3px solid $primary;
+$nav-active-margin: 14.6em;
+$nav-message-count-size: 1.5em;
+$main-welcome-back-anna-size: 17.5em;
+$main-welcome-back-anna-margin: 5em;
+$progress-height: .4em;
 // Styles
 *,
 *::before,
@@ -55,6 +79,9 @@ body {
     grid-template-rows: $admin-header-height 1fr; //$admin-footer-height;
     grid-template-columns: $admin-nav-width 1fr $admin-aside-width;
     grid-template-areas: "header_nav header_main header_aside" "nav main aside" "nav main aside"; // "footer footer footer";
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
 }
 
 body::after {
@@ -103,7 +130,6 @@ main,
 aside {
     display: grid;
     grid-template-rows: $main-grid-template-rows;
-    padding: $main-padding
 }
 
 header {
@@ -133,19 +159,8 @@ header {
     grid-template-columns: 1fr min-content;
 }
 
-nav {
-    grid-area: nav;
-}
-
 aside {
     grid-area: aside;
-}
-
-main {
-    grid-area: main;
-    background-color: $main-color;
-    border-left: $main-border;
-    border-right: $main-border;
 }
 
 .logo {
@@ -173,7 +188,7 @@ main {
 
 .header_main .date {
     font-size: $font-xs;
-    color: $text-secondary;
+    color: $text-date;
 }
 
 .header_main i {
@@ -186,8 +201,436 @@ main {
 
 .header_aside .title {
     font-size: $font-xs;
+    font-weight: 600;
 }
 
 .header_aside i {
+    color: $text-secondary;
+}
+
+nav {
+    grid-area: nav;
+    grid-template-rows: 1fr min-content;
+    align-items: center;
+    margin-bottom: $spacing-s;
+}
+
+nav ul {
+    display: grid;
+    z-index: 2;
+    gap: $spacing-xl;
+    font-size: $font-xs;
+    margin-bottom: -$upgradeIconMargin;
+    padding: 0 0 0 $spacing-l;
+}
+
+nav ul li {
+    display: grid;
+}
+
+nav ul a {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    gap: $spacing;
+    font-weight: 600;
+    align-items: center;
+    color: $text-secondary;
+}
+
+nav ul li.active a {
+    color: $text;
+}
+
+nav ul li.active::after {
+    content: '';
+    border-right: $nav-active-border;
+    position: absolute;
+    height: 1.5em;
+    left: $nav-active-margin;
+}
+
+nav ul li.active i {
+    color: $primary;
+}
+
+nav ul li .messageCount {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $nav-message-count-size;
+    height: $nav-message-count-size;
+    border-radius: $spacing;
+    position: absolute;
+    font-size: $font-message-count;
+    background-color: $secondary;
+    color: $text-inverted;
+    margin-left: 1em;
+    margin-top: -.5em;
+}
+
+nav ul i {
+    font-size: $font;
+}
+
+.upgradeContainer {
+    z-index: 2;
+    display: grid;
+    grid-template-rows: min-content min-content min-content;
+    gap: $spacing;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: $main-color;
+    border-radius: $spacing-s;
+    margin: $spacing-s;
+    padding: $spacing-s $spacing;
+    font-size: $font-xxs;
+    color: $text-secondary;
+}
+
+.upgradeContainer b {
+    color: $text;
+    font-weight: 700;
+}
+
+.upgradeContainer svg {
+    width: $upgradeIcon;
+    height: auto;
+    justify-self: center;
+    position: relative;
+    margin-top: $upgradeIconMargin;
+}
+
+.upgradeContainer a {
+    background-color: $primary;
+    padding: $spacing-xs $spacing-s;
+    border-radius: $spacing-xs;
+    color: $text-inverted;
+}
+
+main {
+    grid-area: main;
+    background-color: $main-color;
+    border-left: $main-border;
+    border-right: $main-border;
+    display: grid;
+    grid-template-rows: min-content min-content min-content min-content;
+    grid-template-columns: 1fr 1fr;
+    padding: $spacing-xxxs $spacing;
+    gap: $spacing-m $spacing-s;
+}
+
+main .welcomeBack {
+    grid-column: auto / 2 span;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    background-color: $secondary-light;
+    border-radius: $spacing-s;
+    z-index: 2;
+    padding: 0 $spacing-xl;
+}
+
+main .welcomeBack svg {
+    position: relative;
+    justify-self: end;
+    width: $main-welcome-back-anna-size;
+    margin-top: -$main-welcome-back-anna-margin;
+    margin-bottom: -$spacing;
+}
+
+main .welcomeBack .textContainer {
+    display: grid;
+    grid-template-rows: min-content min-content;
+    gap: $spacing-s;
+}
+
+main .welcomeBack .title {
+    font-size: $font-l;
+    font-weight: 600;
+    color: $secondary;
+}
+
+main .welcomeBack .subtitle {
+    font-size: $font-xs;
+    color: $text;
+}
+
+main .latestResults,
+main .timeSpent {
+    display: grid;
+    grid-template-rows: min-content 1fr;
+    gap: $spacing;
+    background-color: $text-inverted;
+    border-radius: $spacing-xs;
+    padding: $spacing-m;
+    z-index: 2 !important;
+}
+
+main .header,
+main .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main .headerText,
+main .headerText {
+    font-size: $font-xs;
+    font-weight: 800;
+}
+
+main .rightElement,
+main .rightElement {
+    font-size: $font-xxxs;
+}
+
+.latestResults .container ul {
+    display: grid;
+    gap: $spacing-xs;
+}
+
+.latestResults .container li {
+    display: grid;
+    grid-template-columns: max-content min-content 1fr max-content max-content;
+    align-items: center;
+    gap: $spacing-xs;
+    font-size: $font-xxxs;
+}
+
+.latestResults .container hr {
+    width: 100%;
+    height: 1px;
+    border: none;
+    background-color: $progress-bg;
+}
+
+.latestResults .unitText,
+.latestResults .unitSeperator {
+    font-weight: 600;
+}
+
+.latestResults .field {
+    color: $text-secondary;
+}
+
+.latestResults .progressContainer {
+    width: 8em;
+    height: $progress-height;
+    background-color: $progress-bg;
+    border-radius: $progress-height;
+}
+
+.latestResults .progressContainer .progress {
+    background-color: $primary;
+    border-radius: $progress-height;
+    height: 100%;
+}
+
+.latestResults .progressContainer .progress.red {
+    background-color: $secondary;
+}
+
+.latestResults .progressText {
+    font-weight: 600;
+    color: $primary;
+}
+
+.latestResults .progressText.red {
+    color: $secondary;
+}
+
+.timeSpent select {
+    background: none;
+    border: none;
+}
+
+.timeSpent .container {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    color: $text-secondary;
+}
+
+.timeSpent .day {
+    font-size: $font-xxxs;
+    display: grid;
+    grid-template-rows: min-content 1fr;
+    gap: $spacing;
+    height: 100%;
+    text-align: center;
+}
+
+.timeSpent .progressContainer {
+    width: $progress-height;
+    height: 100%;
+    border-radius: $progress-height;
+    background-color: $listening;
+    justify-self: center;
+}
+
+// @for $i from 0 to 8 {
+//     $writing-percent: random(100);
+//     $vocabulary-percent: random(100 - $writing-percent);
+//     $grammar-percent: random(100 - $writing-percent - $vocabulary-percent);
+//     $listening-percent: 100 - $writing-percent - $vocabulary-percent - $grammar-percent;
+//     .day:nth-child(#{$i}) .progressContainer {
+//         .vocabulary {
+//             background-color: $vocabulary;
+//             height: percentage($vocabulary-percent / 100);
+//         }
+//         .grammar {
+//             background-color: $grammar;
+//             height: percentage($grammar-percent / 100);
+//         }
+//         .listening {
+//             background-color: $listening;
+//             height: percentage($listening-percent / 100);
+//         }
+//         .writing {
+//             background-color: $writing;
+//             height: percentage($writing-percent / 100);
+//         }
+//     }
+// }
+.timeSpent .legendContainer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    font-size: $font-xxxs;
+    justify-content: center;
+    gap: $spacing-xs;
+    color: $text-secondary;
+}
+
+.circle {
+    $size: .7em;
+    width: $size;
+    height: $size;
+    border-radius: $size;
+    background-color: $vocabulary;
+}
+
+.vocabulary .circle {
+    background-color: $vocabulary;
+}
+
+.grammar .circle {
+    background-color: $grammar;
+}
+
+.listening .circle {
+    background-color: $listening;
+}
+
+.writing .circle {
+    background-color: $writing;
+}
+
+.timeSpent .legendContainer .legend {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    align-items: center;
+    gap: $spacing-xs;
+}
+
+main .courses {
+    z-index: 2;
+    grid-column: auto / 2 span;
+}
+
+main .coursesContainer {
+    grid-column: auto / 2 span;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    z-index: 2;
+    gap: $spacing-xs;
+}
+
+main .course {
+    display: grid;
+    grid-template-areas: "level field field" "level type arrow";
+    grid-template-columns: min-content 1fr min-content;
+    grid-template-rows: min-content min-content;
+    background-color: #4d4cac;
+    color: $text-inverted;
+    gap: $spacing-xs;
+    padding: $spacing-s;
+    align-items: center;
+    border-radius: $spacing-xs;
+    font-size: $font-xs;
+}
+
+main .course:nth-child(2) {
+    background-color: #9698d6;
+}
+
+main .course:nth-child(3) {
+    background-color: #ff808b;
+}
+
+.course .level {
+    grid-area: level;
+    background-color: rgba($color: #fff, $alpha: .1);
+    padding: $spacing-xs;
+    border-radius: $spacing-xs;
+}
+
+.course .field {
+    grid-area: field;
+    font-size: $font-xxxs;
+    opacity: .5;
+}
+
+.course .type {
+    grid-area: type;
+}
+
+.course .arrow {
+    grid-area: arrow;
+    justify-self: end;
+}
+
+aside {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    gap: $spacing;
+}
+
+aside .profile {
+    display: grid;
+    grid-template-rows: repeat(3, min-content);
+    gap: $spacing-xs;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    z-index: 2;
+}
+
+aside .profile svg {
+    width: 8em;
+    height: auto;
+}
+
+aside .profile .add {
+    $size: 2em;
+    width: $size;
+    height: $size;
+    border-radius: $size;
+    border: 3px solid $text-inverted;
+    background-color: $primary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $text-inverted;
+    position: relative;
+    margin-top: -5em;
+    justify-self: end;
+}
+
+aside .profile .name {
+    font-weight: 800;
+}
+
+aside .profile .title {
+    font-size: $font-s;
     color: $text-secondary;
 }
